update cb and hybrid

--- a/cb_models.ipynb
+++ b/cb_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,23 +235,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ratings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "R_bar = movies[\"AverageRating\"].mean()\n",
     "c = movies[\"VoteCount\"].quantile(0.95)\n",
-    "def normalized_average_rating(row):\n",
+    "def average_rating(row):\n",
     "    R = row[\"AverageRating\"]\n",
     "    v = row[\"VoteCount\"]\n",
-    "    return (v * R + c * R_bar) / (v + c) / 5.0\n",
-    "weighted_ratings = movies.apply(normalized_average_rating, axis=1)"
+    "    return (v * R + c * R_bar) / (v + c)\n",
+    "weighted = movies.apply(average_rating, axis=1)\n",
+    "weighted_max = weighted.max()\n",
+    "weighted_min = weighted.min()\n",
+    "weighted_range = weighted_max - weighted_min\n",
+    "normalized = (weighted - weighted_min) / weighted_range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Genres"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,58 +295,59 @@
     "        for g in genres:\n",
     "            if g == \"(no genres listed)\":\n",
     "                continue\n",
-    "            genres_vect[movies_genres_mapper[g]] = 1.0 * w\n",
+    "            genres_vect[movies_genres_mapper[g]] = 1.0\n",
+    "        genres_vect = [w] + genres_vect\n",
     "        result.append(genres_vect)\n",
     "    return torch.FloatTensor(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([87585, 19])"
+       "torch.Size([87585, 20])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf_genres_mat = one_hot_genres_encode(movies[\"Genres\"], weighted_ratings)\n",
+    "tf_genres_mat = one_hot_genres_encode(movies[\"Genres\"], normalized)\n",
     "torch.save(tf_genres_mat, \"./models/cb/genres_with_ratings.pt\")\n",
     "tf_genres_mat.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendation for Toy Story (1995)\n",
-      "175625 The Dragon Spell (2016) 1.0\n",
-      "33463 DuckTales: The Movie - Treasure of the Lost Lamp (1990) 1.0\n",
-      "278208 Tad the Lost Explorer and the Curse of the Mummy (2022) 1.0\n",
-      "269122 Bunyan and Babe (2017) 1.0\n",
-      "192981 Penguin Highway (2018) 1.0\n",
-      "213207 Onward (2020) 1.0\n",
-      "166461 Moana (2016) 1.0\n",
-      "3754 Adventures of Rocky and Bullwinkle, The (2000) 1.0\n",
-      "289983 The Monkey King (2023) 1.0\n",
-      "200630 Missing Link (2019) 1.0\n"
+      "Recommendation for Puss in Boots: The Last Wish (2022)\n",
+      "166461 Moana (2016) 0.9999973773956299\n",
+      "3114 Toy Story 2 (1999) 0.9998486638069153\n",
+      "4016 Emperor's New Groove, The (2000) 0.9998302459716797\n",
+      "247988 Luca (2021) 0.9998108744621277\n",
+      "225173 Soul (2020) 0.9998044967651367\n",
+      "213207 Onward (2020) 0.9997608661651611\n",
+      "4886 Monsters, Inc. (2001) 0.9995051622390747\n",
+      "286131 The Super Mario Bros. Movie (2023) 0.9992679357528687\n",
+      "1 Toy Story (1995) 0.9990704655647278\n",
+      "206959 Frozen II (2019) 0.9987330436706543\n"
      ]
     }
    ],
    "source": [
-    "movie_id = 1\n",
+    "movie_id = 281096\n",
     "print(\"Recommendation for\", movies[movies[\"MovieID\"] == movie_id][\"Title\"].values[0])\n",
     "for m_id, sim in zip(*get_recommendation(movie_id, mapper, tf_genres_mat, 10)):\n",
     "    print(m_id, movies[movies[\"MovieID\"] == m_id][\"Title\"].values[0], sim)"
@@ -343,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +371,7 @@
        "torch.Size([87585, 702])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,29 +387,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendation for Toy Story (1995)\n",
-      "6099 Megaforce (1982) 0.6118521690368652\n",
-      "201975 Action Figures (2015) 0.5887300968170166\n",
-      "201977 Action Figures 2 (2018) 0.5816023349761963\n",
-      "200884 Quad (1982) 0.5105335116386414\n",
-      "72485 Lemon Tree (2008) 0.4880746304988861\n",
-      "32959 Boy (Shônen) (1969) 0.48507559299468994\n",
-      "202517 Kung Fu Panda: Secrets of the Scroll (2016) 0.45864298939704895\n",
-      "111628 Mega Python vs. Gatoroid (2011) 0.45693689584732056\n",
-      "136489 Terror on the Midway (1942) 0.4384334087371826\n",
-      "272627 Foreboding (1992) 0.41186511516571045\n"
+      "Recommendation for Soul (2020)\n",
+      "120410 From Above (2013) 0.4838382303714752\n",
+      "275795 Why We Ride (2013) 0.47731947898864746\n",
+      "213894 Hungry Soul, Part II (1956) 0.4502737820148468\n",
+      "182973 Güneşin Oğlu (2008) 0.44501250982284546\n",
+      "209159 Window of the Soul (2001) 0.43867963552474976\n",
+      "182209 Cannibal Capers (1930) 0.42764735221862793\n",
+      "189617 Soul Food Junkies (2012) 0.41078197956085205\n",
+      "188059 Kashtanka (1952) 0.41040924191474915\n",
+      "170111 The Puppet Syndrome (2015) 0.40646958351135254\n",
+      "279288 The Swearing Jar (2022) 0.38764044642448425\n"
      ]
     }
    ],
    "source": [
-    "movie_id = 1\n",
+    "movie_id = 225173\n",
     "print(\"Recommendation for\", movies[movies[\"MovieID\"] == movie_id][\"Title\"].values[0])\n",
     "for m_id, sim in zip(*get_recommendation(movie_id, mapper, tf_plot_mat, 10)):\n",
     "    print(m_id, movies[movies[\"MovieID\"] == m_id][\"Title\"].values[0], sim)"
@@ -412,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +440,7 @@
        "torch.Size([87585, 485])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,14 +458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendation for Toy Story (1995)\n",
+      "Recommendation for Toy Story (1995)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3114 Toy Story 2 (1999) 0.7406386137008667\n",
       "78499 Toy Story 3 (2010) 0.6615656018257141\n",
       "169318 Theo Von: No Offense (2016) 0.5818730592727661\n",
