--- a/notebooks/data_correction.ipynb
+++ b/notebooks/data_correction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from scrapers.drivers import Requester"
    ]
   },
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,39 +324,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some tmdb links are missing or not exist. Use TMDB api to try to get the rest.  \n",
-    "See implementation in [imdb_to_tmdb.py](../imdb_to_tmdb.py).\n"
+    "Some tmdb links are missing or not exist. Use TMDB api to try to get the rest.  \n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/52: 125877 --> None\n",
+      "2/52: 38426 --> None\n",
+      "3/52: 102336 --> None\n",
+      "4/52: 113212 --> 1397138\n",
+      "5/52: 123953 --> None\n",
+      "6/52: 120881 --> None\n",
+      "7/52: 133090 --> None\n",
+      "8/52: 133361 --> None\n",
+      "9/52: 87690 --> None\n",
+      "10/52: 341315 --> None\n",
+      "11/52: 81454 --> None\n",
+      "12/52: 56600 --> None\n",
+      "13/52: 223249 --> None\n",
+      "14/52: 348862 --> None\n",
+      "15/52: 142032 --> None\n",
+      "16/52: 377059 --> None\n",
+      "17/52: 1141486 --> None\n",
+      "18/52: 1517595 --> None\n",
+      "19/52: 1104746 --> None\n",
+      "20/52: 1433856 --> None\n",
+      "21/52: 1594971 --> None\n",
+      "22/52: 874957 --> None\n",
+      "23/52: 1103248 --> None\n",
+      "24/52: 466214 --> None\n",
+      "25/52: 495705 --> None\n",
+      "26/52: 1590050 --> None\n",
+      "27/52: 199208 --> None\n",
+      "28/52: 1753881 --> None\n",
+      "29/52: 1759871 --> None\n",
+      "30/52: 1226036 --> None\n",
+      "31/52: 901206 --> None\n",
+      "32/52: 159542 --> None\n",
+      "33/52: 368520 --> None\n",
+      "34/52: 2109106 --> None\n",
+      "35/52: 2327631 --> None\n",
+      "36/52: 1706542 --> None\n",
+      "37/52: 1337601 --> None\n",
+      "38/52: 2380408 --> None\n",
+      "39/52: 2060305 --> None\n",
+      "40/52: 2973064 --> None\n",
+      "41/52: 2510620 --> None\n",
+      "42/52: 1647292 --> None\n",
+      "43/52: 401019 --> None\n",
+      "44/52: 2928078 --> None\n",
+      "45/52: 2285557 --> None\n",
+      "46/52: 1220553 --> None\n",
+      "47/52: 2138180 --> None\n",
+      "48/52: 1765980 --> None\n",
+      "49/52: 308188 --> None\n",
+      "50/52: 3670792 --> None\n",
+      "51/52: 4438688 --> None\n",
+      "52/52: 8819192 --> None\n"
+     ]
+    }
+   ],
    "source": [
-    "```python\n",
-    "    converter = Requester()\n",
-    "    links = pd.read_csv(\"./database/ml-32m/links.csv\")\n",
-    "    missing = links[links[\"tmdbId\"].isna()]\n",
-    "    missing_count = len(missing)\n",
-    "    for i, idx in enumerate(missing.index):\n",
-    "        imdb_id = int(links.iloc[idx][\"imdbId\"])\n",
-    "        url = (\n",
-    "            f\"https://api.themoviedb.org/3/find/tt{imdb_id:07d}?external_source=imdb_id\"\n",
-    "        )\n",
-    "        results = converter.get(url)[\"movie_results\"]\n",
-    "        if results:\n",
-    "            tmdb_id = results[0][\"id\"]\n",
-    "        else:\n",
-    "            tmdb_id = None\n",
-    "        print(f\"{i + 1}/{missing_count}: {imdb_id} --> {tmdb_id}\")\n",
-    "        links.loc[int(idx), \"tmdbId\"] = tmdb_id\n",
-    "    links.to_csv(\"./database/ml-32m/links.csv\", index=False)\n",
-    "```\n"
+    "converter = Requester()\n",
+    "missing = links[links[\"TmdbID\"].isna()]\n",
+    "missing_count = len(missing)\n",
+    "for i, idx in enumerate(missing.index):\n",
+    "    imdb_id = int(links.iloc[idx][\"ImdbID\"])\n",
+    "    url = (f\"https://api.themoviedb.org/3/find/tt{imdb_id:07d}?external_source=imdb_id\")\n",
+    "    results = converter.get(url)[\"movie_results\"]\n",
+    "    if results:\n",
+    "        tmdb_id = results[0][\"id\"]\n",
+    "    else:\n",
+    "        tmdb_id = None\n",
+    "    print(f\"{i + 1}/{missing_count}: {imdb_id} --> {tmdb_id}\")\n",
+    "    links.loc[int(idx), \"TmdbID\"] = tmdb_id\n",
+    "links.to_csv(\"../database/ml-32m/links.csv\", index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "walapy",
+   "display_name": "vocalopy",
    "language": "python",
    "name": "python3"
   },
@@ -371,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
