renamed:    notebooks/data-crawl/data_reduction.ipynb -> data_reduction.ipynb 	modified:   notebooks/data-crawl/data_blending.ipynb 	modified:   notebooks/data-crawl/data_correction.ipynb 	modified:   notebooks/data-crawl/data_exploration.ipynb 	modified:   readme.md

--- a/notebooks/data-crawl/data_correction.ipynb
+++ b/notebooks/data-crawl/data_correction.ipynb
@@ -9,16 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, sys\n",
-    "sys.path.append(os.path.abspath(\"..\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -40,10 +30,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "links = pd.read_csv(\"../database/ml-32m/links.csv\").rename(\n",
+    "links = pd.read_csv(\"./database/ml-32m/links.csv\").rename(\n",
     "    {\"movieId\": \"MovieID\", \"imdbId\": \"ImdbID\", \"tmdbId\": \"TmdbID\"}, axis=1\n",
     ")\n",
-    "movies = pd.read_csv(\"../database/ml-32m/movies.csv\").rename(\n",
+    "movies = pd.read_csv(\"./database/ml-32m/movies.csv\").rename(\n",
     "    {\"movieId\": \"MovieID\", \"title\": \"Title\", \"genres\": \"Genres\"}, axis=1\n",
     ")"
    ]
@@ -68,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imdb = pd.read_csv(\"../database/imdb/movie_entries.csv\")"
+    "imdb = pd.read_csv(\"./database/imdb/movie_entries.csv\")"
    ]
   },
   {
@@ -210,7 +200,7 @@
    "outputs": [],
    "source": [
     "filter_missing = imdb[~imdb[\"ImdbID\"].isin(missing_imdb[\"ImdbID\"].values)]\n",
-    "filter_missing.to_csv(\"../database/imdb/movie_entries.csv\", index=False)"
+    "filter_missing.to_csv(\"./database/imdb/movie_entries.csv\", index=False)"
    ]
   },
   {
