--- a/notebooks/data-crawl/data_exploration.ipynb
+++ b/notebooks/data-crawl/data_exploration.ipynb
@@ -34,9 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = pd.read_csv(\"../database/merged/full/ratings.csv\")\n",
-    "metadatas = pd.read_csv(\"../database/merged/metadatas.csv\")\n",
-    "movie_ratings = pd.read_csv(\"../database/merged/global_ratings.csv\")\n",
+    "ratings = pd.read_csv(\"./database/merged/full/ratings.csv\")\n",
+    "metadatas = pd.read_csv(\"./database/merged/metadatas.csv\")\n",
+    "movie_ratings = pd.read_csv(\"./database/merged/global_ratings.csv\")\n",
     "movies = pd.merge(metadatas, movie_ratings, on=\"MovieID\")"
    ]
   },
