--- a/data_reduction.ipynb
+++ b/data_reduction.ipynb
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "SOURCE_FILE = \"../database/merged/full/ratings.csv\"\n",
+    "SOURCE_FILE = \"./database/merged/full/ratings.csv\"\n",
     "ratings = pd.read_csv(SOURCE_FILE)\n",
     "print_data_count(ratings)"
    ]
@@ -71,13 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "import os\n",
     "from utility import Mapper, prune_bigraph\n",
     "\n",
-    "TARGET_FILE = \"../database/merged/small/ratings.csv\"\n",
-    "SOURCE_MAPPER_FILE = \"../database/merged/full/pydata/mapper.pkl\"\n",
-    "TARGET_MAPPER_FILE = \"../database/merged/small/pydata/mapper.pkl\"\n",
+    "TARGET_FILE = \"./database/merged/small/ratings.csv\"\n",
+    "SOURCE_MAPPER_FILE = \"./database/merged/full/pydata/mapper.pkl\"\n",
+    "TARGET_MAPPER_FILE = \"./database/merged/small/pydata/mapper.pkl\"\n",
     "\n",
     "user_items = ratings.drop(columns=\"Rating\")\n",
     "ui_matrix = user_items.to_numpy()\n",
@@ -176,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "walapy",
+   "display_name": "vocalopy",
    "language": "python",
    "name": "python3"
   },
