modified:   .gitignore 	new file:   app.py 	modified:   models/__init__.py 	modified:   models/__pycache__/__init__.cpython-312.pyc 	modified:   notebooks/data-crawl/data_blending.ipynb 	modified:   notebooks/data-crawl/data_correction.ipynb 	modified:   notebooks/data-crawl/data_exploration.ipynb 	modified:   readme.md

--- a/notebooks/data-crawl/data_blending.ipynb
+++ b/notebooks/data-crawl/data_blending.ipynb
@@ -57,11 +57,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "links = pd.read_csv(\"./database/ml-32m/links.csv\").rename({\"movieId\": \"MovieID\", \"imdbId\": \"ImdbID\", \"tmdbId\": \"TmdbID\"}, axis=1)\n",
-    "movies = pd.read_csv(\"./database/ml-32m/movies.csv\").rename({\"movieId\": \"MovieID\", \"title\": \"Title\", \"genres\": \"Genres\"}, axis=1)\n",
-    "imdb = pd.read_csv(\"./database/imdb/movie_entries.csv\")\n",
-    "tmdb = pd.read_csv(\"./database/tmdb/movie_entries.csv\")\n",
-    "ratings = pd.read_csv(\"./database/ml-32m/ratings.csv\")"
+    "links = pd.read_csv(\"../database/ml-32m/links.csv\").rename({\"movieId\": \"MovieID\", \"imdbId\": \"ImdbID\", \"tmdbId\": \"TmdbID\"}, axis=1)\n",
+    "movies = pd.read_csv(\"../database/ml-32m/movies.csv\").rename({\"movieId\": \"MovieID\", \"title\": \"Title\", \"genres\": \"Genres\"}, axis=1)\n",
+    "imdb = pd.read_csv(\"../database/imdb/movie_entries.csv\")\n",
+    "tmdb = pd.read_csv(\"../database/tmdb/movie_entries.csv\")\n",
+    "ratings = pd.read_csv(\"../database/ml-32m/ratings.csv\")"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_ratings.to_csv(\"./database/merged/full/global_ratings.csv\", index=False)"
+    "merged_ratings.to_csv(\"../database/merged/full/global_ratings.csv\", index=False)"
    ]
   },
   {
@@ -1546,7 +1546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_metadata.to_csv(\"./database/merged/full/metadatas.csv\", index=False)"
+    "merged_metadata.to_csv(\"../database/merged/full/metadatas.csv\", index=False)"
    ]
   }
  ],
