update cb notebook

--- a/notebooks/training/cb_models.ipynb
+++ b/notebooks/training/cb_models.ipynb
@@ -9,7 +9,9 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import pandas as pd\n",
+    "import json\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from ast import literal_eval"
    ]
   },
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +171,7 @@
        "2  John and Max resolve to save their beloved bai...       3.287087    43509.0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,32 +364,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([87585, 702])"
+       "torch.Size([87585, 2280])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "titles_and_plots = merge_text(movies[\"Title\"], movies[\"Plot\"], (1, 1))\n",
-    "vectstem = TFIDVectAndStem(0.005, 1.0)\n",
+    "vectstem = TFIDVectAndStem(0.001, 0.005)\n",
     "vectstem.fit(titles_and_plots)\n",
     "tf_plot_mat = vectstem(titles_and_plots)\n",
     "torch.save(tf_plot_mat, \"./models/cb/titles_and_plots.pt\")\n",
+    "np.save(\"models/cb/keywords.npy\", vectstem.features)\n",
+    "with open(\"models/cb/vocab.json\", \"w\") as file:\n",
+    "    json.dump(vectstem.vocab, file)\n",
     "tf_plot_mat.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommendation for Toy Story (1995)\n",
+      "120474 Toy Story That Time Forgot (2014) 0.7035073637962341\n",
+      "239474 Lamp Life (2020) 0.7035073637962341\n",
+      "193759 Power of Grayskull: The Definitive History of He-Man and the Masters of the Universe (2017) 0.7035073637962341\n",
+      "153234 Toy Reanimator (2002) 0.6450608968734741\n",
+      "201588 Toy Story 4 (2019) 0.6366295218467712\n",
+      "115875 Toy Story Toons: Hawaiian Vacation (2011) 0.6327633857727051\n",
+      "120468 Toy Story Toons: Partysaurus Rex (2012) 0.6220443248748779\n",
+      "78499 Toy Story 3 (2010) 0.6127521991729736\n",
+      "208112 Rudolph the Red-Nosed Reindeer & the Island of Misfit Toys (2001) 0.6083803772926331\n",
+      "3114 Toy Story 2 (1999) 0.605545699596405\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_id = 1\n",
+    "print(\"Recommendation for\", movies[movies[\"MovieID\"] == movie_id][\"Title\"].values[0])\n",
+    "for m_id, sim in zip(*get_recommendation(movie_id, mapper, tf_plot_mat, 10)):\n",
+    "    print(m_id, movies[movies[\"MovieID\"] == m_id][\"Title\"].values[0], sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -395,16 +430,16 @@
      "output_type": "stream",
      "text": [
       "Recommendation for Soul (2020)\n",
-      "120410 From Above (2013) 0.4838382303714752\n",
-      "275795 Why We Ride (2013) 0.47731947898864746\n",
-      "213894 Hungry Soul, Part II (1956) 0.4502737820148468\n",
-      "182973 Güneşin Oğlu (2008) 0.44501250982284546\n",
-      "209159 Window of the Soul (2001) 0.43867963552474976\n",
-      "182209 Cannibal Capers (1930) 0.42764735221862793\n",
-      "189617 Soul Food Junkies (2012) 0.41078197956085205\n",
-      "188059 Kashtanka (1952) 0.41040924191474915\n",
-      "170111 The Puppet Syndrome (2015) 0.40646958351135254\n",
-      "279288 The Swearing Jar (2022) 0.38764044642448425\n"
+      "4301 Calle 54 (2000) 0.48218005895614624\n",
+      "165331 Song of Lahore (2015) 0.48218005895614624\n",
+      "219374 Jammin' the Blues (1944) 0.48218005895614624\n",
+      "155748 Born to Be Blue (2015) 0.48218005895614624\n",
+      "192325 Jazz on a Summer's Day (1960) 0.43974214792251587\n",
+      "252788 Joe & Joe (1996) 0.4334331154823303\n",
+      "210561 Joe Leahy's Neighbors (1988) 0.4298184812068939\n",
+      "170503 People You May Know (2016) 0.4298184812068939\n",
+      "183703 Forever My Girl (2018) 0.42514103651046753\n",
+      "213091 The Skywalk Is Gone (2002) 0.42514103651046753\n"
      ]
     }
    ],
@@ -431,16 +466,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([87585, 485])"
+       "torch.Size([87585, 482])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +484,7 @@
     "directors = movies[\"Directors\"].apply(lambda x: \" \".join(x))\n",
     "cast = movies[\"Cast\"].apply(lambda x: \" \".join(x[:10]))\n",
     "directors_and_cast = merge_text(directors, cast, (2, 1))\n",
-    "vectstem = TFIDVectAndStem(0.005, 1.0)\n",
+    "vectstem = TFIDVectAndStem(0.005, 0.1)\n",
     "vectstem.fit(directors_and_cast)\n",
     "tf_dircast_mat = vectstem(directors_and_cast)\n",
     "torch.save(tf_dircast_mat, \"./models/cb/directors_and_cast.pt\")\n",
@@ -458,30 +493,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendation for Toy Story (1995)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3114 Toy Story 2 (1999) 0.7406386137008667\n",
-      "78499 Toy Story 3 (2010) 0.6615656018257141\n",
-      "169318 Theo Von: No Offense (2016) 0.5818730592727661\n",
-      "123200 Jim Jefferies: I Swear to God (2009) 0.5722253322601318\n",
-      "168474 Ukonvaaja (2016) 0.5556421279907227\n",
-      "281708 Come Back Anytime (2021) 0.5556421279907227\n",
-      "169552 Ralphie May: Unruly (2015) 0.5556421279907227\n",
-      "95856 Knick Knack (1989) 0.5556421279907227\n",
-      "169648 John Pinette: I'm Starvin'! (2007) 0.5556421279907227\n",
-      "170159 The Bridge on the River Kwai: An Appreciation by Filmmaker John Milius (2000) 0.5556421279907227\n"
+      "Recommendation for Toy Story (1995)\n",
+      "3114 Toy Story 2 (1999) 0.6659654974937439\n",
+      "78499 Toy Story 3 (2010) 0.6239543557167053\n",
+      "115879 Toy Story Toons: Small Fry (2011) 0.5229395031929016\n",
+      "106022 Toy Story of Terror (2013) 0.5195543766021729\n",
+      "115875 Toy Story Toons: Hawaiian Vacation (2011) 0.4724394679069519\n",
+      "159801 Old Fashioned: The Story of the Wisconsin Supper Club (2015) 0.4704514443874359\n",
+      "166409 The Sea Around Us (1953) 0.46715396642684937\n",
+      "120474 Toy Story That Time Forgot (2014) 0.42283886671066284\n",
+      "180767 Lucky People Center International (1998) 0.39776840806007385\n",
+      "229119 Rifkin's Festival (2020) 0.3931911885738373\n"
      ]
     }
    ],
@@ -491,11 +520,47 @@
     "for m_id, sim in zip(*get_recommendation(movie_id, mapper, tf_dircast_mat, 10)):\n",
     "    print(m_id, movies[movies[\"MovieID\"] == m_id][\"Title\"].values[0], sim)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommendation for Shrek (2001)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "257813 Shrek in the Swamp Karaoke Dance Party (2001) 0.6370930671691895\n",
+      "53121 Shrek the Third (2007) 0.6302591562271118\n",
+      "196229 Full of Grace (2015) 0.5436352491378784\n",
+      "194903 One Small Step (2018) 0.5267082452774048\n",
+      "8360 Shrek 2 (2004) 0.510800302028656\n",
+      "282725 Andrew Santino: Cheeseburger (2023) 0.4690206050872803\n",
+      "1475 Kama Sutra: A Tale of Love (1996) 0.4690206050872803\n",
+      "5430 For a Lost Soldier (Voor een Verloren Soldaat) (1992) 0.4690206050872803\n",
+      "189725 Lek and the Dogs (2017) 0.4690206050872803\n",
+      "166064 Battle Under Orion (2009) 0.4690206050872803\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_id = 4306\n",
+    "print(\"Recommendation for\", movies[movies[\"MovieID\"] == movie_id][\"Title\"].values[0])\n",
+    "for m_id, sim in zip(*get_recommendation(movie_id, mapper, tf_dircast_mat, 10)):\n",
+    "    print(m_id, movies[movies[\"MovieID\"] == m_id][\"Title\"].values[0], sim)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vocalopy",
+   "display_name": "walapy",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
